--- a/models/employee/fields.yaml
+++ b/models/employee/fields.yaml
@@ -56,6 +56,7 @@ tabs:
     social_media:
       type: repeater
       tab: hambern.company::lang.labels.social
+      prompt: hambern.company::lang.labels.social_prompt
       form:
           fields:
               name:
