Updated Czech language file

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -78,3 +78,5 @@
     - Added social media prompt (thanx Jan Vince)
 1.2.12:
     - Added company email, phone and address
+1.2.13:
+    - Updated Czech language file
