Fixed a really small typo

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -80,3 +80,5 @@
     - Added company email, phone and address
 1.2.13:
     - Updated Czech language file
+1.2.14:
+    - Fixed a really small typo
