--- a/models/tag/fields_modal.yaml
+++ b/models/tag/fields_modal.yaml
@@ -23,13 +23,9 @@ tabs:
         icon:
             label: hambern.company::lang.labels.icon
             span: full
-            default: fa-
+            default: fa-tag
             comment: hambern.company::lang.projects.icon_comment
             tab: hambern.company::lang.labels.description
-        projects:
-            type: partial
-            path: $/hambern/company/controllers/relations/projects.htm
-            tab: hambern.company::lang.projects.menu_label
         picture:
             label: hambern.company::lang.labels.picture
             type: fileupload
@@ -46,13 +42,3 @@ tabs:
             imageHeight: 260
             imageWidth: 260
             tab: hambern.company::lang.labels.attachments
-        files:
-            label: hambern.company::lang.labels.files
-            type: fileupload
-            mode: file
-            span: right
-            tab: hambern.company::lang.labels.attachments
-        tags:
-            type: partial
-            path: $/hambern/company/controllers/relations/tags.htm
-            tab: hambern.company::lang.tags.menu_label
