--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -88,3 +88,5 @@
     - Added tags
     - create_tags_table.php
     - change_pivots_table_20160918.php
+1.3.1:
+    - Added filter options on the components
