--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -90,3 +90,5 @@
     - change_pivots_table_20160918.php
 1.3.1:
     - Added filter options on the components
+1.3.2:
+    - Added social media to company
