--- a/models/employee/fields_modal.yaml
+++ b/models/employee/fields_modal.yaml
@@ -22,7 +22,7 @@ tabs:
   fields:
     picture:
         label: hambern.company::lang.labels.picture
-        type: fileupload
+        type: mediafinder
         mode: image
         span: right
         imageHeight: 260
