--- a/models/project/fields.yaml
+++ b/models/project/fields.yaml
@@ -33,7 +33,7 @@ tabs:
         tab: hambern.company::lang.services.menu_label
     picture:
         label: hambern.company::lang.labels.picture
-        type: fileupload
+        type: mediafinder
         mode: image
         span: left
         imageHeight: 260
