--- a/models/service/fields_modal.yaml
+++ b/models/service/fields_modal.yaml
@@ -28,7 +28,7 @@ tabs:
             tab: hambern.company::lang.labels.description
         picture:
             label: hambern.company::lang.labels.picture
-            type: fileupload
+            type: mediafinder
             mode: image
             span: left
             imageHeight: 260
@@ -36,7 +36,7 @@ tabs:
             tab: hambern.company::lang.labels.attachments
         pictures:
             label: hambern.company::lang.labels.pictures
-            type: fileupload
+            type: mediafinder
             mode: image
             span: right
             imageHeight: 260
