--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -92,3 +92,5 @@
     - Added filter options on the components
 1.3.2:
     - Added social media to company
+1.3.3:
+    - !!! This changes fileupload to mediafinder on single image fields. You will have to add new images to these fields
