--- a/models/project/fields_modal.yaml
+++ b/models/project/fields_modal.yaml
@@ -29,7 +29,7 @@ tabs:
         tab: hambern.company::lang.labels.description
     picture:
         label: hambern.company::lang.labels.picture
-        type: mediafinder
+        type: fileupload
         mode: image
         span: left
         imageHeight: 260
