--- a/models/employee/fields.yaml
+++ b/models/employee/fields.yaml
@@ -22,7 +22,7 @@ tabs:
   fields:
     picture:
         label: hambern.company::lang.labels.picture
-        type: mediafinder
+        type: fileupload
         mode: image
         span: right
         imageHeight: 260
