--- a/models/service/fields.yaml
+++ b/models/service/fields.yaml
@@ -32,7 +32,7 @@ tabs:
             tab: hambern.company::lang.projects.menu_label
         picture:
             label: hambern.company::lang.labels.picture
-            type: mediafinder
+            type: fileupload
             mode: image
             span: left
             imageHeight: 260
@@ -40,7 +40,7 @@ tabs:
             tab: hambern.company::lang.labels.attachments
         pictures:
             label: hambern.company::lang.labels.pictures
-            type: mediafinder
+            type: fileupload
             mode: image
             span: right
             imageHeight: 260
