--- a/models/tag/fields.yaml
+++ b/models/tag/fields.yaml
@@ -28,7 +28,7 @@ tabs:
             tab: hambern.company::lang.labels.description
         picture:
             label: hambern.company::lang.labels.picture
-            type: mediafinder
+            type: fileupload
             mode: image
             span: left
             imageHeight: 260
