--- a/models/role/fields.yaml
+++ b/models/role/fields.yaml
@@ -8,6 +8,7 @@ fields:
         span: auto
     published_at:
         label: hambern.company::lang.labels.published_at
+        default: now
         type: datepicker
         mode: date
         span: auto
