--- a/models/service/fields.yaml
+++ b/models/service/fields.yaml
@@ -9,6 +9,7 @@ fields:
     published_at:
         label: hambern.company::lang.labels.published_at
         type: datepicker
+        default: now
         mode: date
         span: auto
 
