--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -98,3 +98,5 @@
     - Added default dates on published_at and born_at
 1.3.5:
     - !!! Due to a bug the logo-field is now once again a fileupload. Sorry for this.
+1.3.6:
+    - Updated the Czech language file. Thanks Jan Vince!
