--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -100,3 +100,5 @@
     - !!! Due to a bug the logo-field is now once again a fileupload. Sorry for this.
 1.3.6:
     - Updated the Czech language file. Thanks Jan Vince!
+1.3.7:
+    - Added the Portuguese language file. Thanks Ronaldo Ribeiro de Sousa!
