--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -105,3 +105,7 @@
 1.3.8:
     - Adding link to services
     - builder_table_update_hambern_company_services.php
+1.3.9:
+    - builder_table_update_hambern_company_services.php
+    - German language support
+    - Adding custom links to services
