--- a/models/role/fields.yaml
+++ b/models/role/fields.yaml
@@ -1,26 +1,30 @@
-# ===================================
-#  Form Field Definitions
-# ===================================
-
 fields:
     name:
-        label: hambern.company::lang.labels.name
+        label: 'hambern.company::lang.labels.name'
+        oc.commentPosition: ''
         span: auto
+        required: 1
+        type: text
     published_at:
-        label: hambern.company::lang.labels.published_at
+        label: 'hambern.company::lang.labels.published_at'
         default: now
         type: datepicker
         mode: date
         span: auto
+    slug:
+        label: 'hambern.company::lang.labels.slug'
+        oc.commentPosition: ''
+        span: auto
+        type: text
 tabs:
-  fields:
-    description:
-        type: richeditor
-        size: giant
-        label: hambern.company::lang.labels.description
-        span: full
-        tab: hambern.company::lang.labels.description
-    employees:
-        type: partial
-        path: $/hambern/company/controllers/relations/employees.htm
-        tab: hambern.company::lang.employees.menu_label
+    fields:
+        description:
+            type: richeditor
+            size: giant
+            label: 'hambern.company::lang.labels.description'
+            span: full
+            tab: 'hambern.company::lang.labels.description'
+        employees:
+            type: partial
+            path: $/hambern/company/controllers/relations/employees.htm
+            tab: 'hambern.company::lang.employees.menu_label'
