--- a/models/testimonial/fields.yaml
+++ b/models/testimonial/fields.yaml
@@ -1,28 +1,27 @@
-# ===================================
-#  Form Field Definitions
-# ===================================
-
 fields:
     content:
-        label: hambern.company::lang.labels.content
+        label: 'hambern.company::lang.labels.content'
         type: textarea
         span: full
     picture:
-        label: hambern.company::lang.labels.picture
+        label: 'hambern.company::lang.labels.picture'
         type: fileupload
         mode: image
         span: right
         imageHeight: 260
         imageWidth: 260
     source:
-        label: hambern.company::lang.labels.source
+        label: 'hambern.company::lang.labels.source'
+        oc.commentPosition: ''
         span: left
+        type: text
     url:
-        label: hambern.company::lang.labels.url
+        label: 'hambern.company::lang.labels.url'
         span: left
-        default: http://
+        default: 'http://'
+        type: text
     published_at:
-        label: hambern.company::lang.labels.published_at
+        label: 'hambern.company::lang.labels.published_at'
         type: datepicker
         default: now
         mode: date
