--- a/models/gallery/fields.yaml
+++ b/models/gallery/fields.yaml
@@ -1,35 +1,38 @@
-# ===================================
-#  Form Field Definitions
-# ===================================
-
 fields:
     name:
-        label: hambern.company::lang.labels.name
+        label: 'hambern.company::lang.labels.name'
+        oc.commentPosition: ''
         span: auto
+        required: 1
+        type: text
     published_at:
-        label: hambern.company::lang.labels.published_at
+        label: 'hambern.company::lang.labels.published_at'
         type: datepicker
         default: now
         mode: date
         span: auto
-
+    slug:
+        label: 'hambern.company::lang.labels.slug'
+        oc.commentPosition: ''
+        span: auto
+        type: text
 tabs:
-  fields:
-    pictures:
-        label: hambern.company::lang.labels.pictures
-        type: fileupload
-        mode: image
-        span: full
-        imageHeight: 260
-        imageWidth: 260
-        label: hambern.company::lang.labels.pictures
-    description:
-        label: hambern.company::lang.labels.description
-        type: richeditor
-        size: giant
-        span: full
-        tab: hambern.company::lang.labels.description
-    tags:
-        type: partial
-        path: $/hambern/company/controllers/relations/tags.htm
-        tab: hambern.company::lang.tags.menu_label
+    fields:
+        pictures:
+            label: 'hambern.company::lang.labels.pictures'
+            type: fileupload
+            mode: image
+            span: full
+            imageHeight: 260
+            imageWidth: 260
+            tab: Misc
+        description:
+            label: 'hambern.company::lang.labels.description'
+            type: richeditor
+            size: giant
+            span: full
+            tab: 'hambern.company::lang.labels.description'
+        tags:
+            type: partial
+            path: $/hambern/company/controllers/relations/tags.htm
+            tab: 'hambern.company::lang.tags.menu_label'
