--- a/models/project/fields_modal.yaml
+++ b/models/project/fields_modal.yaml
@@ -1,52 +1,52 @@
-# ===================================
-#  Form Field Definitions
-# ===================================
-
 fields:
     name:
-        label: hambern.company::lang.labels.name
+        label: 'hambern.company::lang.labels.name'
+        oc.commentPosition: ''
         span: auto
+        required: 1
+        type: text
     customer:
-        label: hambern.company::lang.labels.customer
+        label: 'hambern.company::lang.labels.customer'
         span: auto
+        type: text
     url:
-        label: hambern.company::lang.labels.url
+        label: 'hambern.company::lang.labels.url'
         span: auto
-        default: http://
+        default: 'http://'
+        type: text
     published_at:
-        label: hambern.company::lang.labels.published_at
+        label: 'hambern.company::lang.labels.published_at'
         default: now
         type: datepicker
         mode: date
         span: auto
-
 tabs:
-  fields:
-    description:
-        type: richeditor
-        size: giant
-        label: hambern.company::lang.labels.description
-        span: full
-        tab: hambern.company::lang.labels.description
-    picture:
-        label: hambern.company::lang.labels.picture
-        type: fileupload
-        mode: image
-        span: left
-        imageHeight: 260
-        imageWidth: 260
-        tab: hambern.company::lang.labels.attachments
-    pictures:
-        label: hambern.company::lang.labels.pictures
-        type: fileupload
-        mode: image
-        span: right
-        imageHeight: 260
-        imageWidth: 260
-        tab: hambern.company::lang.labels.attachments
-    files:
-        label: hambern.company::lang.labels.files
-        type: fileupload
-        mode: file
-        span: right
-        tab: hambern.company::lang.labels.attachments
+    fields:
+        description:
+            type: richeditor
+            size: giant
+            label: 'hambern.company::lang.labels.description'
+            span: full
+            tab: 'hambern.company::lang.labels.description'
+        picture:
+            label: 'hambern.company::lang.labels.picture'
+            type: fileupload
+            mode: image
+            span: left
+            imageHeight: 260
+            imageWidth: 260
+            tab: 'hambern.company::lang.labels.attachments'
+        pictures:
+            label: 'hambern.company::lang.labels.pictures'
+            type: fileupload
+            mode: image
+            span: right
+            imageHeight: 260
+            imageWidth: 260
+            tab: 'hambern.company::lang.labels.attachments'
+        files:
+            label: 'hambern.company::lang.labels.files'
+            type: fileupload
+            mode: file
+            span: right
+            tab: 'hambern.company::lang.labels.attachments'
